@@ -1,3 +1,10 @@
+2012-09-17	The InnoDB Team
+
+	* btr/btr0btr.c, btr/btr0cur.c, buf/buf0lru.c,
+	include/page0zip.h, log/log0recv.c, page/page0cur.c,
+	page/page0page.c, page/page0zip.c:
+	Fix Bug#12701488 ASSERT PAGE_ZIP_VALIDATE, UNIV_ZIP_DEBUG
+
 2012-08-29	The InnoDB Team
 
 	* btr/btr0btr.c, page/page0cur.c, page/page0page.c:
